# DocuMind

./: .gitignore  README.md  pyproject.toml  test_crawl_result.py
data/: httpbinorg.json
documind/: main.py
documind/agents/: base_agent.py
documind/core/: __init__.py  crawler.py  graph.py  knowledge_base.py  spider.py  vector_store.py
documind/utils/: helpers.py
examples/: graph_example.py  knowledge_base_example.py  spider_example.py
tests/: test_graph.py  test_knowledge_base.py  test_main.py  test_spider.py
